# OOPLab2

./: CMakeLists.txt  README.md
include/: Binary.h
src/: Binary.cpp
test/: test.cpp
